<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/teal_700">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                app:cardCornerRadius="15dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/naruto" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp"

                        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00BCD4"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:background="#00BCD4"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:paddingStart="15dp"
                        android:text="NARUTO SHIPPUDEN"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            app:srcCompat="@drawable/ic_baseline_star_rate_24" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            app:srcCompat="@drawable/ic_baseline_star_rate_24" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            app:srcCompat="@drawable/ic_baseline_star_rate_24" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            app:srcCompat="@drawable/ic_baseline_star_rate_24" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            app:srcCompat="@drawable/ic_baseline_star_half_24" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginTop="3dp"
                            android:layout_weight="1"
                            android:text="4.9"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/deskripsi"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/details"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/nb"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/price"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/Harga"
                                android:textColor="@color/black"
                                android:textSize="24sp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/button"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="15dp"
                            android:layout_weight="0.5"
                            android:background="#FFEB3B"
                            android:text="BACA"
                            android:textAllCaps="false"
                            android:textColor="#bdbdbdbd" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00BCD4"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00BCD4"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="Rekomendasi Komik"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
